tests/sources/invalid/borrow/loop_move_errors.fire
// Loop-sensitive ownership error tests

import @firescript/std.io.println;

fn consume(s: string) -> void {
    println(s);
}

a: string = "while";
i: int32 = 0i32;
while (i < 1i32) {
    consume(a);  // a may move in loop body
    i = i + 1i32;
}
println(a);  // Error: a may have moved on loop path  //~ ERROR FS-SEM-0001 @9

b: string = "for";
for (j: int32 = 0i32; j < 1i32; j++) {
    consume(b);  // b may move in loop body
}
println(b);  // Error: b may have moved on loop path  //~ ERROR FS-SEM-0001 @9
